@@ -1,3 +1,12 @@
+2008-08-02  Kai Tietz  <kai.tietz@onevision.com>
+
+	* time.h (_localtime32): Alias it for w32 to _localtime.
+	(_difftime32): To _difftime.
+	(_ctime32): To _ctime.
+	(_gmtime32): To _gmtime.
+	(_mktime32): To _mktime.
+	(_time32): To _time.
+
 2008-07-27  Kai Tietz  <kai.tietz@onevision.com>
 
 	* wchar.h (WCHAR_MAX): Make it type wchar_t.
